// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewVotingPlay renders correctly 1`] = `
<DocumentFragment>
  <div
    class="wpbb-reset tw-uppercase tw-bg-no-repeat tw-bg-top tw-bg-cover  tw-dark"
    style="background-image: url(undefined);"
  >
    <div
      class="tw-flex tw-flex-col tw-items-center tw-max-w-[900px] tw-m-auto tw-pb-[83px] tw-pt-[62px] tw-px-20"
    >
      <div
        class="tw-mb-20 tw-flex tw-items-center tw-gap-14"
      >
        <span
          class="tw-font-500"
        >
          My Picks
        </span>
        <button
          class="tw-flex tw-items-center tw-w-[30px] tw-p-[3px] tw-rounded-16 tw-border-2 tw-border-solid tw-border-white tw-text-white tw-cursor-pointer tw-bg-dd-blue dark:tw-bg-none tw-transition-all tw-duration-300"
          title="Show popular picks"
        >
          <svg
            class="tw-transition-transform tw-duration-300"
            fill="none"
            height="10"
            style="transform: translateX(0);"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="5"
              cy="5"
              fill="currentcolor"
              r="5"
            />
          </svg>
        </button>
        <span
          class="tw-font-500"
        >
          Popular Picks
        </span>
      </div>
      <div
        class="tw-flex tw-flex-col tw-justify-center tw-items-center"
        style="height: 0px; width: 984px;"
      >
        <div
          style="transform: scale(0.9989847715736041);"
        >
          <div
            class="tw-flex tw-flex-col tw-dark wpbb-default-bracket tw-relative"
          >
            <div
              class="tw-flex tw-flex-col tw-justify-end"
              style="margin-bottom: 95px; min-height: 0;"
            >
              <div
                class="tw-flex tw-flex-col tw-items-center"
                style="gap: 24px;"
              >
                <span
                  class="tw-text-48 sm:tw-text-48 tw-text-dd-blue dark:tw-text-white tw-font-700 tw-text-center tw-leading-none"
                  style="width: 700px;"
                >
                  test teset's Chip Flavors picks
                </span>
                <div
                  class="wpbb-team-3-0-winner tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[297px] tw-h-[52px] tw-text-dd-blue tw-font-700 tw-bg-white"
                  data-testid="team-slot-round-3-match-0-winner"
                  style="border-width: 0px;"
                >
                  <span
                    style="font-size: 32px; transform: scale(1); visibility: hidden;"
                  >
                    jalapeno
                  </span>
                </div>
              </div>
            </div>
            <div
              class="tw-flex tw-flex-col tw-justify-center tw-h-100"
            >
              <div
                class="tw-flex tw-justify-between"
                style="width: 985px;"
              >
                <div
                  class="wpbb-default-match-column tw-flex tw-flex-col tw-justify-center tw-gap-[80px]"
                >
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-0-0-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-0-match-0-left"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          Classic
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          67%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-0-0-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-0-match-0-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          doritos
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          33%
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-0-1-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-0-match-1-left"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          cheetos
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          67%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-0-1-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-0-match-1-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          takis
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          33%
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="tw-h-[76px] tw-w-[115px]"
                  />
                  <div
                    class="tw-h-[76px] tw-w-[115px]"
                  />
                </div>
                <div
                  class="wpbb-default-match-column tw-flex tw-flex-col tw-justify-center tw-gap-[236px]"
                >
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-1-0-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-1-match-0-left"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          Classic
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          67%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-1-0-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-1-match-0-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          cheetos
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          33%
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-1-1-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-1-match-1-left"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          cheddar cheese
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          67%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-1-1-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-1-match-1-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          honey mustard
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          33%
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="wpbb-default-match-column tw-flex tw-flex-col tw-justify-center tw-gap-[548px]"
                >
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-2-0-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-dd-blue tw-font-500 tw-bg-white"
                        data-testid="team-slot-round-2-match-0-left"
                        style="border-width: 0px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          Classic
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          100%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-2-0-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-2-match-0-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          cheddar cheese
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          0%
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="wpbb-default-match-column tw-flex tw-flex-col tw-justify-center tw-gap-[1172px]"
                >
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[-48px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-3-0-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-dd-blue tw-font-500 tw-bg-white"
                        data-testid="team-slot-round-3-match-0-left"
                        style="border-width: 0px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          Classic
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          50%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-3-0-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-3-match-0-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          jalapeno
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          50%
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="wpbb-default-match-column tw-flex tw-flex-col tw-justify-center tw-gap-[548px]"
                >
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-2-1-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-dd-blue tw-font-500 tw-bg-white"
                        data-testid="team-slot-round-2-match-1-left"
                        style="border-width: 0px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          jalapeno
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          100%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-2-1-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-2-match-1-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          bbq
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          0%
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="wpbb-default-match-column tw-flex tw-flex-col tw-justify-center tw-gap-[236px]"
                >
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-1-2-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-1-match-2-left"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          jalapeno
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          67%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-1-2-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-1-match-2-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          sour cream/onion
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          33%
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-1-3-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-1-match-3-left"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          bbq
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          67%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-1-3-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-1-match-3-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          salt and Vinegar
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          33%
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="wpbb-default-match-column tw-flex tw-flex-col tw-justify-center tw-gap-[80px]"
                >
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-0-4-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-0-match-4-left"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          jalapeno
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          67%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-0-4-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-0-match-4-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          chili lime
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          33%
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="tw-h-[76px] tw-w-[115px]"
                  />
                  <div
                    class="tw-h-[76px] tw-w-[115px]"
                  />
                  <div
                    class="tw-h-[76px] tw-w-[115px]"
                  />
                </div>
              </div>
            </div>
            <div
              style="margin-top: 20px; min-height: 200px;"
            >
              <div
                class="tw-flex tw-flex-col tw-gap-20 tw-justify-between tw-items-center tw-font-700 tw-whitespace-nowrap "
              >
                <span
                  class="tw-text-36 tw-text-dd-blue dark:tw-text-white"
                >
                  Who You Got?
                </span>
                <svg
                  class="tw-w-[124px] tw-text-black/25 dark:tw-text-white"
                />
              </div>
            </div>
            <div
              class="tw-absolute"
            >
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
            </div>
            <div
              class="tw-absolute"
            >
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ViewVotingPlay renders correctly 2`] = `
<DocumentFragment>
  <div
    class="wpbb-reset tw-uppercase tw-bg-no-repeat tw-bg-top tw-bg-cover  tw-dark"
    style="background-image: url(undefined);"
  >
    <div
      class="tw-flex tw-flex-col tw-items-center tw-max-w-[900px] tw-m-auto tw-pb-[83px] tw-pt-[62px] tw-px-20"
    >
      <div
        class="tw-mb-20 tw-flex tw-items-center tw-gap-14"
      >
        <span
          class="tw-font-500"
        >
          My Picks
        </span>
        <button
          class="tw-flex tw-items-center tw-w-[30px] tw-p-[3px] tw-rounded-16 tw-border-2 tw-border-solid tw-border-green tw-text-green tw-cursor-pointer tw-bg-dd-blue dark:tw-bg-none tw-transition-all tw-duration-300"
          title="Show my picks"
        >
          <svg
            class="tw-transition-transform tw-duration-300"
            fill="none"
            height="10"
            style="transform: translateX(100%);"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="5"
              cy="5"
              fill="currentcolor"
              r="5"
            />
          </svg>
        </button>
        <span
          class="tw-font-500"
        >
          Popular Picks
        </span>
      </div>
      <div
        class="tw-flex tw-flex-col tw-justify-center tw-items-center"
        style="height: 0px; width: 984px;"
      >
        <div
          style="transform: scale(0.9989847715736041);"
        >
          <div
            class="tw-flex tw-flex-col tw-dark wpbb-default-bracket tw-relative"
          >
            <div
              class="tw-flex tw-flex-col tw-justify-end"
              style="margin-bottom: 95px; min-height: 0;"
            >
              <div
                class="tw-flex tw-flex-col tw-items-center"
                style="gap: 24px;"
              >
                <span
                  class="tw-text-48 sm:tw-text-48 tw-text-dd-blue dark:tw-text-white tw-font-700 tw-text-center tw-leading-none"
                  style="width: 700px;"
                >
                  test teset's Chip Flavors picks
                </span>
                <div
                  class="wpbb-team-3-0-winner tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[297px] tw-h-[52px] tw-text-dd-blue tw-font-700 tw-bg-green"
                  data-testid="team-slot-round-3-match-0-winner"
                  style="border-width: 0px;"
                >
                  <span
                    style="font-size: 32px; transform: scale(1); visibility: hidden;"
                  >
                    jalapeno
                  </span>
                </div>
              </div>
            </div>
            <div
              class="tw-flex tw-flex-col tw-justify-center tw-h-100"
            >
              <div
                class="tw-flex tw-justify-between"
                style="width: 985px;"
              >
                <div
                  class="wpbb-default-match-column tw-flex tw-flex-col tw-justify-center tw-gap-[80px]"
                >
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-0-0-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-green"
                        data-testid="team-slot-round-0-match-0-left"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          Classic
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          67%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-0-0-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-0-match-0-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          doritos
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          33%
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-0-1-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-green"
                        data-testid="team-slot-round-0-match-1-left"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          cheetos
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          67%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-0-1-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-0-match-1-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          takis
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          33%
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="tw-h-[76px] tw-w-[115px]"
                  />
                  <div
                    class="tw-h-[76px] tw-w-[115px]"
                  />
                </div>
                <div
                  class="wpbb-default-match-column tw-flex tw-flex-col tw-justify-center tw-gap-[236px]"
                >
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-1-0-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-green"
                        data-testid="team-slot-round-1-match-0-left"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          Classic
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          67%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-1-0-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-1-match-0-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          cheetos
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          33%
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-1-1-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-green"
                        data-testid="team-slot-round-1-match-1-left"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          cheddar cheese
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          67%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-1-1-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-1-match-1-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          honey mustard
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          33%
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="wpbb-default-match-column tw-flex tw-flex-col tw-justify-center tw-gap-[548px]"
                >
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-2-0-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-green"
                        data-testid="team-slot-round-2-match-0-left"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          Classic
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          100%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-2-0-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-2-match-0-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          cheddar cheese
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          0%
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="wpbb-default-match-column tw-flex tw-flex-col tw-justify-center tw-gap-[1172px]"
                >
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[-48px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-3-0-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-3-match-0-left"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          Classic
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          50%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-3-0-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-green"
                        data-testid="team-slot-round-3-match-0-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          jalapeno
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          50%
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="wpbb-default-match-column tw-flex tw-flex-col tw-justify-center tw-gap-[548px]"
                >
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-2-1-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-green"
                        data-testid="team-slot-round-2-match-1-left"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          jalapeno
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          100%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-2-1-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-2-match-1-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          bbq
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          0%
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="wpbb-default-match-column tw-flex tw-flex-col tw-justify-center tw-gap-[236px]"
                >
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-1-2-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-green"
                        data-testid="team-slot-round-1-match-2-left"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          jalapeno
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          67%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-1-2-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-1-match-2-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          sour cream/onion
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          33%
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-1-3-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-green"
                        data-testid="team-slot-round-1-match-3-left"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          bbq
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          67%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-1-3-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-1-match-3-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          salt and Vinegar
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          33%
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="wpbb-default-match-column tw-flex tw-flex-col tw-justify-center tw-gap-[80px]"
                >
                  <div
                    class="tw-flex tw-flex-col tw-gap-[20px] tw-translate-y-[0px]"
                  >
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-0-4-left tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-green"
                        data-testid="team-slot-round-0-match-4-left"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          jalapeno
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-green"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          67%
                        </span>
                      </div>
                    </div>
                    <div
                      class="tw-relative"
                    >
                      <div
                        class="wpbb-team-0-4-right tw-relative tw-flex tw-justify-center tw-items-center tw-whitespace-nowrap tw-leading-none tw-uppercase tw-font-sans tw-w-[115px] tw-h-[28px] tw-text-white tw-font-500 tw-bg-transparent tw-border-solid tw-border-white/50"
                        data-testid="team-slot-round-0-match-4-right"
                        style="border-width: 2px;"
                      >
                        <span
                          style="font-size: 16px; transform: scale(1); visibility: hidden;"
                        >
                          chili lime
                        </span>
                      </div>
                      <div
                        class="tw-absolute tw-top-0 tw-right-0 tw-transform tw-translate-x-1/2 tw--translate-y-1/2 tw-rounded-16 tw-flex tw-items-center tw-justify-center tw-bg-[lightgray]"
                      >
                        <span
                          class="tw-p-4 tw-text-dd-blue tw-text-12 tw-font-600 tw-leading-none"
                        >
                          33%
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="tw-h-[76px] tw-w-[115px]"
                  />
                  <div
                    class="tw-h-[76px] tw-w-[115px]"
                  />
                  <div
                    class="tw-h-[76px] tw-w-[115px]"
                  />
                </div>
              </div>
            </div>
            <div
              style="margin-top: 20px; min-height: 200px;"
            >
              <div
                class="tw-flex tw-flex-col tw-gap-20 tw-justify-between tw-items-center tw-font-700 tw-whitespace-nowrap "
              >
                <span
                  class="tw-text-36 tw-text-dd-blue dark:tw-text-white"
                >
                  Who You Got?
                </span>
                <svg
                  class="tw-w-[124px] tw-text-black/25 dark:tw-text-white"
                />
              </div>
            </div>
            <div
              class="tw-absolute"
            >
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
            </div>
            <div
              class="tw-absolute"
            >
              <div
                class="react-lineto-placeholder"
              />
              <div
                class="react-lineto-placeholder"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
